[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menu.gd" type="Script" id=2]
[ext_resource path="res://ui/UIButton.tscn" type="PackedScene" id=3]

[node name="Menu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )

[node name="Margin" type="MarginContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin" index="0"]
margin_left = 16.0
margin_top = 16.0
margin_right = 464.0
margin_bottom = 254.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="Margin/VBox" index="0"]
margin_right = 448.0
margin_bottom = 25.0
text = "PAUSED"
align = 1
valign = 1

[node name="List" type="VBoxContainer" parent="Margin/VBox" index="1"]
margin_top = 33.0
margin_right = 448.0
margin_bottom = 238.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" parent="Margin/VBox/List" index="0" instance=ExtResource( 3 )]
margin_left = 168.0
margin_top = 39.0
margin_right = 279.0
margin_bottom = 76.0
size_flags_horizontal = 4
text = "Resume"

[node name="Options" parent="Margin/VBox/List" index="1" instance=ExtResource( 3 )]
margin_left = 169.0
margin_top = 84.0
margin_right = 278.0
margin_bottom = 121.0
size_flags_horizontal = 4
text = "Options"

[node name="Quit" parent="Margin/VBox/List" index="2" instance=ExtResource( 3 )]
margin_left = 189.0
margin_top = 129.0
margin_right = 259.0
margin_bottom = 166.0
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="Margin/VBox/List/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Margin/VBox/List/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Margin/VBox/List/Quit" to="." method="_on_Quit_pressed"]
